--- a/prepros.cfg
+++ b/prepros.cfg
@@ -6,7 +6,7 @@
     "data": {
       "id": "",
       "cfgVersion": 2,
-      "name": "baileigh",
+      "name": "agent",
       "path": "",
       "files": {
         "783a7455": {
@@ -725,6 +725,32 @@
           "imported": false,
           "parents": [],
           "type": "php"
+        },
+        "2e8f9ea2": {
+          "id": "2e8f9ea2",
+          "path": "README.md",
+          "output": "README.html",
+          "name": "README.md",
+          "category": "HTML",
+          "autoCompile": true,
+          "sanitize": false,
+          "gfm": true,
+          "wrapWithHtml": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "markdown"
+        },
+        "aa5fd7cb": {
+          "id": "aa5fd7cb",
+          "path": "README.html",
+          "output": "README.html",
+          "name": "README.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {
@@ -865,7 +891,7 @@
           "ftpPort": "22",
           "ftpUsePrivateKey": false,
           "ftpPrivateKey": "",
-          "ftpRemotePath": "applications/qzqzhgcnts/public_html/wp-content/themes/baileigh",
+          "ftpRemotePath": "applications/qzqzhgcnts/public_html/wp-content/themes/agent",
           "ftpUserName": "",
           "ftpPassword": "",
           "ftpType": "SFTP",
