--- a/prepros.cfg
+++ b/prepros.cfg
@@ -234,19 +234,6 @@
           "parents": [],
           "type": "css"
         },
-        "821f5664": {
-          "id": "821f5664",
-          "path": "screenshot.jpg",
-          "output": "screenshot.jpg",
-          "name": "screenshot.jpg",
-          "category": "IMAGE",
-          "size": 745208,
-          "type": "jpg",
-          "initialSize": 745208,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "3325d18c": {
           "id": "3325d18c",
           "path": "templates/blank-slate.php",
@@ -751,6 +738,19 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "bc77a80d": {
+          "id": "bc77a80d",
+          "path": "screenshot.png",
+          "output": "screenshot.png",
+          "name": "screenshot.png",
+          "category": "IMAGE",
+          "size": 1043839,
+          "type": "png",
+          "initialSize": 1043839,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {
