Removed un needed extras

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -745,9 +745,9 @@
           "output": "screenshot.png",
           "name": "screenshot.png",
           "category": "IMAGE",
-          "size": 1043839,
+          "size": 660718,
           "type": "png",
-          "initialSize": 1043839,
+          "initialSize": 660718,
           "optimized": false,
           "height": 0,
           "width": 0
